add font montserrat

--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,11 @@
     <title>Simple Green Store</title>
 </head>
 <body>
-    <nav class="navigation-bar"></nav>
+    <nav class="navigation-bar">
+        <div class="navigation-bar-logo">SimpleGreen</div>
+    </nav>
     <header class="header">
-        
+        Привет! Мы симле грин
     </header>
 
     <script src="./js/app.min.js"></script>
