add header html/css for desktop

--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,16 @@
     <title>Simple Green Store</title>
 </head>
 <body>
-    <nav class="navigation-bar">
-        <div class="navigation-bar-logo">SimpleGreen</div>
-    </nav>
     <header class="header">
-        Привет! Мы симле грин
+        <div class="header-logo"><a href="#" class="logo-link">SimpleGreen</a></div>
+        <nav class="header-nav">
+            <ul class="header-nav-list">
+                <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Home</a></li>
+                <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">About</a></li>
+                <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Products</a></li>
+                <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Contact Us</a></li>
+            </ul>
+        </nav>
     </header>
 
     <script src="./js/app.min.js"></script>
