--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="intro">
+            <div class="intro-content grid">
+                <h1 class="intro-title">Здоровое питание это легко</h1>
+                <p class="intro-text">Гарантированная экономия на ваших любимых органических брендах с доставкой к вашей двери</p>
+            </div>
+        </section>
+    </main>
 
     <script src="./js/app.min.js"></script>
 </body>
