add html/css for section intro

--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/app.min.css">
     <title>Simple Green Store</title>
 </head>
 <body>
     <header class="header">
-        <div class="header-logo"><a href="#" class="logo-link">SimpleGreen</a></div>
+        <div class="header-logo"><img class="header-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
         <nav class="header-nav">
             <ul class="header-nav-list">
                 <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Home</a></li>
@@ -18,11 +19,16 @@
         </nav>
     </header>
     <main>
-        <section class="intro">
-            <div class="intro-content grid">
+        <section class="intro parallax grid">
+            <div class="intro-content">
+                <div class="intro-logo"><img class="header-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
                 <h1 class="intro-title">Здоровое питание это легко</h1>
                 <p class="intro-text">Гарантированная экономия на ваших любимых органических брендах с доставкой к вашей двери</p>
+                <a href="#" class="intro-button">Погнали!</a>
             </div>
+        </section>
+        <section class="about">
+
         </section>
     </main>
 
