add html/css for section about

--- a/app/index.html
+++ b/app/index.html
@@ -27,8 +27,21 @@
                 <a href="#" class="intro-button">Погнали!</a>
             </div>
         </section>
-        <section class="about">
-
+        <section class="about grid">
+            <div class="about-image"><img src="./images/dest/about3.jpg" alt="Team"></div>
+            <div class="about-content">
+                <h2 class="about-title section-title">Привет Друг!</h2>
+                <p class="about-text">Команда Simple Green
+                    приветствует тебя🖖</p>
+                <p class="about-text">Мы не просто магазин эко товаров, мы – территория здорового питания.
+                    Мы искренне верим, что полезное и правильное питание должно быть доступно каждому,
+                    поэтому мы и решили открыть это пространство, где ты сможешь найти не только всё необходимое
+                    для здоровой сбалансированной диеты, но также получить совет и консультацию. </p>
+                <p class="about-text">Наша цель – научить базовым принципам и направить как можно большее количество людей
+                    на путь здорового образа жизни.
+                    А здоровый образ жизни, в свою очередь, начинается с правильного питания. </p>
+                <p class="about-text">С Simple Green это становится проще!</p>
+            </div>
         </section>
     </main>
 
