--- a/app/index.html
+++ b/app/index.html
@@ -7,44 +7,61 @@
     <title>Simple Green Store</title>
 </head>
 <body>
-    <header class="header">
-        <div class="header-logo"><img class="header-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
-        <nav class="header-nav">
-            <ul class="header-nav-list">
-                <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Home</a></li>
-                <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">About</a></li>
-                <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Products</a></li>
-                <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="intro parallax grid">
-            <div class="intro-content">
-                <div class="intro-logo"><img class="header-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
-                <h1 class="intro-title">Здоровое питание это легко</h1>
-                <p class="intro-text">Гарантированная экономия на ваших любимых органических брендах с доставкой к вашей двери</p>
-                <a href="#" class="intro-button">Погнали!</a>
-            </div>
-        </section>
-        <section class="about grid">
-            <div class="about-image"><img src="./images/dest/about3.jpg" alt="Team"></div>
-            <div class="about-content">
-                <h2 class="about-title section-title">Привет Друг!</h2>
-                <p class="about-text">Команда Simple Green
-                    приветствует тебя🖖</p>
-                <p class="about-text">Мы не просто магазин эко товаров, мы – территория здорового питания.
-                    Мы искренне верим, что полезное и правильное питание должно быть доступно каждому,
-                    поэтому мы и решили открыть это пространство, где ты сможешь найти не только всё необходимое
-                    для здоровой сбалансированной диеты, но также получить совет и консультацию. </p>
-                <p class="about-text">Наша цель – научить базовым принципам и направить как можно большее количество людей
-                    на путь здорового образа жизни.
-                    А здоровый образ жизни, в свою очередь, начинается с правильного питания. </p>
-                <p class="about-text">С Simple Green это становится проще!</p>
-            </div>
-        </section>
-    </main>
+<header class="header">
+    <div class="header-logo"><img class="header-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
+    <nav class="header-nav">
+        <ul class="header-nav-list">
+            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Home</a></li>
+            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">About</a></li>
+            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Products</a></li>
+            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Contact Us</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <section class="intro parallax grid">
+        <div class="intro-content">
+            <div class="intro-logo"><img class="header-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
+            <h1 class="intro-title">Здоровое питание это легко</h1>
+            <p class="intro-text">Гарантированная экономия на ваших любимых органических брендах с доставкой к вашей
+                двери</p>
+            <a href="#" class="intro-button">Погнали!</a>
+        </div>
+    </section>
+    <section class="about grid">
+        <div class="about-image"><img src="./images/dest/about3.jpg" alt="Team"></div>
+        <div class="about-content">
+            <h2 class="about-title section-title">Привет Друг!</h2>
+            <p class="about-text">Команда Simple Green
+                приветствует тебя🖖</p>
+            <p class="about-text">Мы не просто магазин эко товаров, мы – территория здорового питания.
+                Мы искренне верим, что полезное и правильное питание должно быть доступно каждому,
+                поэтому мы и решили открыть это пространство, где ты сможешь найти не только всё необходимое
+                для здоровой сбалансированной диеты, но также получить совет и консультацию. </p>
+            <p class="about-text">Наша цель – научить базовым принципам и направить как можно большее количество людей
+                на путь здорового образа жизни.🥦</p>
+            <p class="about-text">А здоровый образ жизни, в свою очередь, начинается с правильного питания. </p>
+            <p class="about-text">С Simple Green это становится проще!</p>
+        </div>
+    </section>
+    <section class="featured-products">
 
-    <script src="./js/app.min.js"></script>
+    </section>
+    <section class="brands grid" style="background-image: url('./images/dest/brands.jpg')">
+        <div class="brands-content container">
+            <h2 class="brands-title section-title">Мы бережно выбираем продукты для Вас:</h2>
+            <div class="brands-list grid">
+                <div class="brands-list-item"><img src="./images/dest/brands1.svg" alt="" class="brands-list-item-logo"></div>
+                <div class="brands-list-item"><img src="./images/dest/brands2.svg" alt="" class="brands-list-item-logo"></div>
+                <div class="brands-list-item"><img src="./images/dest/brands3.svg" alt="" class="brands-list-item-logo"></div>
+            </div>
+        </div>
+    </section>
+    <section class="stores-location">
+
+    </section>
+</main>
+
+<script src="./js/app.min.js"></script>
 </body>
 </html>
