--- a/app/index.html
+++ b/app/index.html
@@ -19,35 +19,35 @@
     </nav>
 </header>
 <main>
-    <section class="intro parallax grid">
+    <section class="intro parallax grid section">
         <div class="intro-content">
             <div class="intro-logo"><img class="header-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
-            <h1 class="intro-title">Здоровое питание это легко</h1>
+            <h1 class="intro-title">Здоровое питание - это легко</h1>
             <p class="intro-text">Гарантированная экономия на ваших любимых органических брендах с доставкой к вашей
                 двери</p>
             <a href="#" class="intro-button">Погнали!</a>
         </div>
     </section>
-    <section class="about grid">
+    <section class="about grid section">
         <div class="about-image"><img src="./images/dest/about3.jpg" alt="Team"></div>
         <div class="about-content">
             <h2 class="about-title section-title">Привет Друг!</h2>
             <p class="about-text">Команда Simple Green
-                приветствует тебя🖖</p>
+                приветствует тебя 🖖</p>
             <p class="about-text">Мы не просто магазин эко товаров, мы – территория здорового питания.
                 Мы искренне верим, что полезное и правильное питание должно быть доступно каждому,
                 поэтому мы и решили открыть это пространство, где ты сможешь найти не только всё необходимое
                 для здоровой сбалансированной диеты, но также получить совет и консультацию. </p>
             <p class="about-text">Наша цель – научить базовым принципам и направить как можно большее количество людей
-                на путь здорового образа жизни.🥦</p>
+                на путь здорового образа жизни. 🥦</p>
             <p class="about-text">А здоровый образ жизни, в свою очередь, начинается с правильного питания. </p>
             <p class="about-text">С Simple Green это становится проще!</p>
         </div>
     </section>
-    <section class="featured-products">
+<!--    <section class="featured-products">-->
 
-    </section>
-    <section class="brands grid" style="background-image: url('./images/dest/brands.jpg')">
+<!--    </section>-->
+    <section class="brands grid section" style="background-image: url('./images/dest/brands.jpg')">
         <div class="brands-content container">
             <h2 class="brands-title section-title">Мы бережно выбираем продукты для Вас:</h2>
             <div class="brands-list grid">
@@ -57,8 +57,21 @@
             </div>
         </div>
     </section>
-    <section class="stores-location">
-
+    <section class="stores section">
+        <div class="stores-container grid">
+            <div class="stores-map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+            <div class="stores-text">
+                <h2 class="stores-title section-title">Мы на карте:</h2>
+                <p class="stores-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, beatae dignissimos distinctio ea enim eveniet expedita harum impedit in, minus molestias, nam nemo perferendis perspiciatis sed similique vero. Perferendis, possimus?</p>
+                <h4 class="stores-text-sub-title">Адрес:</h4>
+                <p class="stores-location">ЖК Маяк Минска, ул. Петра Мстиславца 8, помещение 377, Минск</p>
+                <h4 class="stores-text-sub-title">Телефон:</h4>
+                <a href="#" class="stores-text-tel">+375-25-636-5217</a>
+                <a href="#" class="stores-text-tel">+375-17-377-1377</a>
+            </div>
+        </div>
     </section>
 </main>
 
