add product way section

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/app.min.css">
     <title>Simple Green Store</title>
@@ -71,6 +72,28 @@
                 <a href="#" class="stores-text-tel">+375-25-636-5217</a>
                 <a href="#" class="stores-text-tel">+375-17-377-1377</a>
             </div>
+        </div>
+    </section>
+    <section class="way section">
+        <h2 class="section-title">Лучше для тебя и для планеты</h2>
+        <div class="way-container container grid">
+            <div class="way-item grid">
+                <div class="way-item-img" style="background-image: url('./images/dest/way1.jpg')"></div>
+                <p class="way-item-caption">Проверенные источники натуральных товаров</p>
+            </div>
+            <div class="way-item grid">
+                <div class="way-item-img" style="background-image: url('./images/dest/way2.jpg')"></div>
+                <p class="way-item-caption">Углеродно-нейтральная доставка</p>
+            </div>
+            <div class="way-item grid">
+                <div class="way-item-img" style="background-image: url('./images/dest/way3.jpg')"></div>
+                <p class="way-item-caption">Безотходные склады</p>
+            </div>
+            <div class="way-item grid">
+                <div class="way-item-img" style="background-image: url('./images/dest/way2.jpg')"></div>
+                <p class="way-item-caption">Перерабатываемая / компостируемая упаковка</p>
+            </div>
+            <div class="way-separator"></div>
         </div>
     </section>
 </main>
