--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="header">
-    <div class="header-logo"><img class="header-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
+    <div class="company-logo"><img class="company-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
     <nav class="header-nav">
         <ul class="header-nav-list">
             <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Home</a></li>
@@ -97,6 +97,19 @@
         </div>
     </section>
 </main>
+<footer class="footer">
+    <div class="footer-container container flex">
+        <div class="company-logo"><img class="company-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
+        <div class="social-links">
+            <ul class="social-links-list">
+                <li class="social-links-list-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li class="social-links-list-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li class="social-links-list-item"><a href="#"><i class="fab fa-vk"></i></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-rights">© Simple Green Company 2020 All rights reserved.</div>
+</footer>
 
 <script src="./js/app.min.js"></script>
 </body>
