--- a/app/index.html
+++ b/app/index.html
@@ -12,10 +12,10 @@
     <div class="company-logo"><img class="company-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
     <nav class="header-nav">
         <ul class="header-nav-list">
-            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Home</a></li>
-            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">About</a></li>
-            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Products</a></li>
-            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Contact Us</a></li>
+            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Главная</a></li>
+            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Кто Мы</a></li>
+            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Продукты</a></li>
+            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Контакты</a></li>
         </ul>
     </nav>
 </header>
@@ -45,12 +45,13 @@
             <p class="about-text">С Simple Green это становится проще!</p>
         </div>
     </section>
-<!--    <section class="featured-products">-->
+    <section class="products">
 
-<!--    </section>-->
+    </section>
     <section class="brands grid section" style="background-image: url('./images/dest/brands.jpg')">
         <div class="brands-content container">
             <h2 class="brands-title section-title">Мы бережно выбираем продукты для Вас:</h2>
+            <p class="brands-text">От сердца ❤️ к солнцу ☀️</p>
             <div class="brands-list grid">
                 <div class="brands-list-item"><img src="./images/dest/brands1.svg" alt="" class="brands-list-item-logo"></div>
                 <div class="brands-list-item"><img src="./images/dest/brands2.svg" alt="" class="brands-list-item-logo"></div>
@@ -58,22 +59,7 @@
             </div>
         </div>
     </section>
-    <section class="stores section">
-        <div class="stores-container grid">
-            <div class="stores-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            </div>
-            <div class="stores-text">
-                <h2 class="stores-title section-title">Мы на карте:</h2>
-                <p class="stores-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, beatae dignissimos distinctio ea enim eveniet expedita harum impedit in, minus molestias, nam nemo perferendis perspiciatis sed similique vero. Perferendis, possimus?</p>
-                <h4 class="stores-text-sub-title">Адрес:</h4>
-                <p class="stores-location">ЖК Маяк Минска, ул. Петра Мстиславца 8, помещение 377, Минск</p>
-                <h4 class="stores-text-sub-title">Телефон:</h4>
-                <a href="#" class="stores-text-tel">+375-25-636-5217</a>
-                <a href="#" class="stores-text-tel">+375-17-377-1377</a>
-            </div>
-        </div>
-    </section>
+
     <section class="way section">
         <h2 class="section-title">Лучше для тебя и для планеты</h2>
         <div class="way-container container grid">
@@ -94,6 +80,28 @@
                 <p class="way-item-caption">Перерабатываемая / компостируемая упаковка</p>
             </div>
             <div class="way-separator"></div>
+        </div>
+    </section>
+
+
+    <section class="stores">
+        <div class="stores-container grid">
+            <div class="stores-map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua" width="100%" height="510" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+            <div class="stores-text">
+                <h2 class="stores-title section-title">Мы на карте:</h2>
+                <p class="stores-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, beatae dignissimos distinctio ea enim eveniet expedita harum impedit in, minus molestias, nam nemo perferendis perspiciatis sed similique vero. Perferendis, possimus?</p>
+                <h4 class="stores-text-sub-title">Адрес:</h4>
+                <p class="stores-location">ЖК Маяк Минска, ул. Петра Мстиславца 8, помещение 377, Минск</p>
+                <h4 class="stores-text-sub-title">Телефон:</h4>
+                <ul>
+                    <li><a href="#" class="stores-text-tel">+375-25-636-5217</a></li>
+                    <li><a href="#" class="stores-text-tel">+375-17-377-1377</a></li>
+                </ul>
+
+
+            </div>
         </div>
     </section>
 </main>
