add functionality for switching tabs at product section

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="header">
-    <div class="company-logo"><img class="company-logo-img" src="./images/dest/logo.svg" alt="LogoSG"></div>
+    <div class="company-logo"><img class="company-logo-img" src="./images/dest/logo.svg" alt="Logo"></div>
     <nav class="header-nav">
         <ul class="header-nav-list">
             <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Главная</a></li>
@@ -23,7 +23,7 @@
 <main>
     <section class="intro parallax grid section">
         <div class="intro-content">
-            <div class="intro-logo"><img class="header-logo-img" src="./images/dest/logoSG.svg" alt="LogoSG"></div>
+            <div class="intro-logo"><img class="header-logo-img" src="./images/dest/logo.svg" alt="LogoSG"></div>
             <h1 class="intro-title">Здоровое питание - это легко</h1>
             <p class="intro-text">Гарантированная экономия на ваших любимых органических брендах с доставкой к вашей
                 двери</p>
@@ -48,57 +48,71 @@
     </section>
     <section class="products grid section">
         <div class="products-text">
-            <h2 class="products-title section-title">Ваш новый универсальный магазин</h2>
+            <h2 class="products-title section-title">На територии здорового питания</h2>
             <p class="products-paragraph">От органических продуктов для вашего стола до природной красоты и чистого
                 дома</p>
         </div>
         <div class="products-content grid">
             <div class="products-content-categories">
-                <button class="products-content-categories-button">Злаки, бобы, орехи</button>
-                <button class="products-content-categories-button">Натуральные сладости и пасты</button>
-                <button class="products-content-categories-button">Продукты из сои, масла и специи</button>
-                <button class="products-content-categories-button">Безалкогольные напитки</button>
-                <button class="products-content-categories-button">Натуральные средства гигиены</button>
-                <button class="products-content-categories-button">Натуральная косметика</button>
-                <button class="products-content-categories-button">Эко средства для дома</button>
-                <button class="products-content-categories-button">Аюрведа и благовония</button>
+                <button class="products-content-categories-button is-active" data-tab-name="cat-tab-1">Злаки, бобы, орехи</button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-2">Натуральные сладости и пасты</button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-3">Продукты из сои, масла и специи</button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-4">Безалкогольные напитки</button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-5">Натуральные средства гигиены</button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-6">Натуральная косметика</button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-7">Эко средства для дома</button>
+                <button class="products-content-categories-button" data-tab-name="cat-tab-8">Аюрведа и благовония</button>
             </div>
-            <div class="products-content-list">
+            <div class="products-content-list cat-tab is-active cat-tab-1">
                 <div class="products-content-list-item">
-                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt=""></div>
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
                     <div class="products-content-list-item-label">
                         <p>Зерновые, бобовые, семена, орехи</p>
                     </div>
                 </div>
                 <div class="products-content-list-item">
-                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-2.png" alt=""></div>
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-2.png" alt="">
+                    </div>
                     <div class="products-content-list-item-label">
                         <p>Клетчатка, отруби, безглютеновая мука и смеси</p>
                     </div>
                 </div>
                 <div class="products-content-list-item">
-                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-3.jpg" alt=""></div>
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-3.jpg" alt="">
+                    </div>
                     <div class="products-content-list-item-label">
                         <p>Хлеб на закваске, хлебцы из полбы</p>
                     </div>
                 </div>
                 <div class="products-content-list-item">
-                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-4.jpg" alt=""></div>
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-4.jpg" alt="">
+                    </div>
                     <div class="products-content-list-item-label">
                         <p>Макароны, лапша</p>
                     </div>
                 </div>
                 <div class="products-content-list-item">
-                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-5.jpg" alt=""></div>
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-5.jpg" alt="">
+                    </div>
                     <div class="products-content-list-item-label">
                         <p>Кэроб, какао и производные продукты</p>
+                    </div>
+                </div>
+            </div>
+            <div class="products-content-list cat-tab cat-tab-2">
+                <div class="products-content-list-item">
+                    <div class="products-content-list-item-img"><img src="./images/dest/categories/cat1-1.jpg" alt="">
+                    </div>
+                    <div class="products-content-list-item-label">
+                        <p>2 -></p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="brands grid" style="background-image: url('./images/dest/brands.jpg')">
-        <div class="brands-content container">
+        <div class="brands-content ">
             <h2 class="brands-title section-title">Мы бережно выбираем продукты для Вас:</h2>
             <p class="brands-text">От сердца, к сердцу ❤️</p>
             <div class="brands-list grid">
@@ -150,10 +164,10 @@
                     perferendis perspiciatis sed similique vero. Perferendis, possimus?</p>
                 <h4 class="stores-text-sub-title">Адрес:</h4>
                 <p class="stores-location">ЖК Маяк Минска, ул. Петра Мстиславца 8, помещение 377, Минск</p>
-                <h4 class="stores-text-sub-title">Телефон:</h4>
+                <h4 class="stores-text-sub-title">Телефоны:</h4>
                 <ul>
-                    <li><a href="#" class="stores-text-tel">+375-25-636-5217</a></li>
-                    <li><a href="#" class="stores-text-tel">+375-17-377-1377</a></li>
+                    <li><a href="#" class="stores-text-tel">+375 (17) 377-1-377</a></li>
+                    <li><a href="#" class="stores-text-tel">+375 (25) 63-65-217</a></li>
                 </ul>
 
 
