--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
             <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Контакты</a></li>
         </ul>
     </nav>
+    <a href="#" class="header-delivery delivery-button button">Заказать доставку</a>
 </header>
 <main>
     <section class="intro parallax grid section">
@@ -27,7 +28,7 @@
             <h1 class="intro-title">Здоровое питание - это легко</h1>
             <p class="intro-text">Гарантированная экономия на ваших любимых органических брендах с доставкой к вашей
                 двери</p>
-            <a href="#" class="intro-button">Погнали!</a>
+            <a href="#" class="intro-button button">Погнали!</a>
         </div>
     </section>
     <section class="about grid section">
@@ -127,7 +128,7 @@
     </section>
 
     <section class="way section">
-        <h2 class="section-title">Лучше для тебя и для планеты</h2>
+        <h2 class="way-title section-title">Лучше для тебя и для планеты</h2>
         <div class="way-container container grid">
             <div class="way-item grid">
                 <div class="way-item-img" style="background-image: url('./images/dest/way1.jpg')"></div>
