add interaction links all over the web page

--- a/app/index.html
+++ b/app/index.html
@@ -10,28 +10,27 @@
 </head>
 <body>
 <header class="header">
-    <div class="company-logo"><img class="company-logo-img" src="./images/dest/logo.svg" alt="Logo"></div>
+    <div class="company-logo"><a href="#introSection"><img class="company-logo-img" src="./images/dest/logo.svg" alt="Logo"></a></div>
     <nav class="header-nav">
         <ul class="header-nav-list">
-            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Главная</a></li>
-            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Кто Мы</a></li>
-            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Продукты</a></li>
-            <li class="header-nav-list-item"><a href="#" class="header-nav-list-link">Контакты</a></li>
+            <li class="header-nav-list-item"><a href="#aboutSection" class="header-nav-list-link">Главная</a></li>
+            <li class="header-nav-list-item"><a href="#productsSection" class="header-nav-list-link">Продукты</a></li>
+            <li class="header-nav-list-item"><a href="#storesSection" class="header-nav-list-link">Контакты</a></li>
         </ul>
     </nav>
     <a href="#" class="header-delivery delivery-button button">Заказать доставку</a>
 </header>
 <main>
-    <section class="intro parallax grid section">
+    <section id="introSection" class="intro parallax grid section">
         <div class="intro-content">
             <div class="intro-logo"><img class="header-logo-img" src="./images/dest/logo.svg" alt="LogoSG"></div>
             <h1 class="intro-title">Здоровое питание - это легко</h1>
             <p class="intro-text">Гарантированная экономия на ваших любимых органических брендах с доставкой к вашей
                 двери</p>
-            <a href="#" class="intro-button button">Погнали!</a>
+            <a href="#aboutSection" class="intro-button button">Погнали!</a>
         </div>
     </section>
-    <section class="about grid section">
+    <section id="aboutSection" class="about grid section">
         <div class="about-image"><img src="./images/dest/about3.jpg" alt="Team"></div>
         <div class="about-content">
             <h2 class="about-title section-title">Привет Друг!</h2>
@@ -47,7 +46,7 @@
             <p class="about-text">С Simple Green это становится проще!</p>
         </div>
     </section>
-    <section class="products grid section">
+    <section id="productsSection" class="products grid section">
         <div class="products-text">
             <h2 class="products-title section-title">На територии здорового питания</h2>
             <p class="products-paragraph">От органических продуктов для вашего стола до природной красоты и чистого
@@ -112,7 +111,7 @@
             </div>
         </div>
     </section>
-    <section class="brands grid" style="background-image: url('./images/dest/brands.jpg')">
+    <section id="brandsSection" class="brands grid" style="background-image: url('./images/dest/brands.jpg')">
         <div class="brands-content ">
             <h2 class="brands-title section-title">Мы бережно выбираем продукты для Вас:</h2>
             <p class="brands-text">От сердца, к сердцу ❤️</p>
@@ -151,7 +150,7 @@
     </section>
 
 
-    <section class="stores">
+    <section id="storesSection" class="stores">
         <div class="stores-container grid">
             <div class="stores-map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.052635044102!2d27.65000711573933!3d53.930808738472535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDU1JzUwLjkiTiAyN8KwMzknMDcuOSJF!5e0!3m2!1sen!2sua!4v1604925654699!5m2!1sen!2sua"
@@ -167,8 +166,8 @@
                 <p class="stores-location">ЖК Маяк Минска, ул. Петра Мстиславца 8, помещение 377, Минск</p>
                 <h4 class="stores-text-sub-title">Телефоны:</h4>
                 <ul>
-                    <li><a href="#" class="stores-text-tel">+375 (17) 377-1-377</a></li>
-                    <li><a href="#" class="stores-text-tel">+375 (25) 63-65-217</a></li>
+                    <li><a href="tel:+375173771377" class="stores-text-tel">+375 (17) 377-1-377</a></li>
+                    <li><a href="tel:+375256365217" class="stores-text-tel">+375 (25) 636-5-217</a></li>
                 </ul>
 
 
